Clean out a bunch of irrelevant stuff.

--- a/theresa.tac.example
+++ b/theresa.tac.example
@@ -10,7 +10,6 @@ class Theresa(theresa.TheresaProtocol):
 class TheresaFactory(theresa.TheresaFactory):
     protocol = Theresa
 
-application = service.Application("echo")
+application = service.Application("theresa")
 theresaFac = TheresaFactory()
 internet.TCPClient('irc.esper.net', 5555, theresaFac).setServiceParent(application)
-theresa.MSPAChecker(theresaFac).setServiceParent(application)
