Adding weasyl copyright; removing twatter.

--- a/theresa.tac.example
+++ b/theresa.tac.example
@@ -1,5 +1,5 @@
 # -*- python -*-
-# Copyright (c) Aaron Gallagher <_@habnab.it>
+# Copyright (c) Aaron Gallagher <_@habnab.it>; Weasyl LLC
 # See COPYING for details.
 
 import theresa
