Adding actual elasticsearch indexing.

--- a/elastirc.tac.example
+++ b/elastirc.tac.example
@@ -3,6 +3,7 @@
 # See COPYING for details.
 
 import elastirc
+from txes.elasticsearch import ElasticSearch
 
 from twisted.application import internet, service
 from twisted.python import filepath
@@ -15,5 +16,5 @@ class ElastircFactory(elastirc.ElastircFactory):
     protocol = Elastirc
 
 application = service.Application("elastirc")
-elastircFac = ElastircFactory(filepath.FilePath('logs'))
+elastircFac = ElastircFactory(filepath.FilePath('logs'), ElasticSearch())
 internet.TCPClient('irc.esper.net', 5555, elastircFac).setServiceParent(application)
